var Main = require ("./Main")

class Matcher extends IMatcher{

    constructor(evaluation){

       super(evaluation)
    }

    matching(intitule, categorie, date, longitude, latitude){
        super.matching(intitule, categorie, date, longitude, latitude)
    }


}